--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,22 @@
-/node_modules/
+# Logs
+logs
+*.log
+
+# Runtime data
+pids
+*.pid
+*.seed
+
+# Coverage directory used by tools like istanbul
+coverage
+
+# Dependency directory
+node_modules
+
+public/css/*
+public/js/*
+!public/css/fonts
+
+src/temp/*
+
+.DS_store
