Come on Travis, deploy to Nodejitsu, please!

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
 - sh -e /etc/init.d/xvfb start
 - sudo apt-get update -qq
 before_script:
-- npm install -g karma karma-cli gulp
+- npm install -g karma karma-cli
 deploy:
   provider: nodejitsu
   user: meesayen
